feat: Implement main frontend application logic in `app.js` for video processing and history management, and update `.gitignore` to exclude common build and environment files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
 /dist
 /build
 /.agent
+
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Environments
+.venv/
+env/
+venv/
+ENV/
+
+# IDEs
+.vscode/
+.idea/
